--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-
+Jair Messias Bolsonaro 
+é um militar reformado e político brasileiro,
+atualmente filiado ao Partido Liberal.
+Foi o 38.º presidente do Brasil,
+tendo sido eleito pelo Partido Social Liberal.
+Foi deputado federal pelo Rio de Janeiro entre 1991 e 2018.
